# hytale-server-manager

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  build.spec  hytale-server-manager.bat  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml  check-no-experimental-addon-leak.yml  check-no-pro-leak.yml  secret-scan.yml
backend/: auth_middleware.py  build.spec  config.py  main.py  plugin_interface.py  plugin_loader.py  requirements.txt
backend/api/: addon_routes.py  auth.py  backups.py  config_files.py  debug_routes.py  info.py  instances.py  mods.py  server.py  settings_routes.py  updater.py  upnp_routes.py
backend/plugins/: README.md
backend/services/: auth.py  backup.py  downloader.py  github.py  instances.py  mods.py  nitrado_plugins.py  nitrado_query.py  ports.py  server.py  settings.py  updater.py
backend/utils/: java.py  log_buffer.py  paths.py  process.py  safe_zip.py
docs/: PRO_PLUGIN.md
manager/: hytale-server-manager.bat
release/: virustotal-links.md
scripts/: build-backend.bat  build-backend.js  build-backend.ps1  build-backend.sh  check-no-secrets.js  ensure-backend-dev.js  sync-version.js  tauri-dev-addons.js  virustotal-scan.js
src/: App.tsx  app.py  config.py  index.css  main.py  main.tsx
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts  types.ts
src/components/: Addon.tsx  (+17 more)
(+61 files in other folders)
