[package]
name = "hytale-server-manager"
version = "2.0.0"
description = "Hytale Server Manager"
authors = ["HytaleLife"]
edition = "2021"

[lib]
name = "hytale_server_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
